[tool.poetry]
name = "gbuilder"
version = "0.1.0"
description = ""
authors = ["karim mattar <karimhady111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.37.2"
uvicorn = "^0.30.1"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
